package br.com.caio.padroes.estruturais.bridge;

public interface Implementor {
    void operacaoImplementada();
}